working in profile page

--- a/resources/sass/_custom.scss
+++ b/resources/sass/_custom.scss
@@ -55,7 +55,15 @@
     margin-left: 2px;
     padding: 0px 2px 0px 3px;
     border-radius: 4px;
-    font-size: 16px;
+    font-size: 15px;
+    border: 1px solid #055d78;
+    background-color: #055d78;
+}
+.print-btn {
+    margin-left: 2px;
+    padding: 0px 2px 0px 3px;
+    border-radius: 4px;
+    font-size: 14px;
     border: 1px solid #055d78;
     background-color: #055d78;
 }
