--- a/public/homepage/css/custom.css
+++ b/public/homepage/css/custom.css
@@ -212,13 +212,13 @@ small {
     font-weight: 400;
 }
 
-.total_amount_sum{
-    border-top:2px solid lightgrey;
-    font-weight: bold;
-    color:green;
-}
-
 #province_name{
     text-align: left;
     margin-left:7px;
+}
+
+.total-sum{
+    border-top:2px solid lightgrey;
+    font-weight: bold !important;
+    color:green;
 }
