--- a/public/homepage/css/custom.css
+++ b/public/homepage/css/custom.css
@@ -160,7 +160,7 @@
 }
 
 .text-header {
-    font-size: 16px;
+    font-size: 14px;
     font-weight: bold;
     color: black;
     margin-bottom: 10px;
@@ -169,13 +169,13 @@
 
 .text-value {
     margin-bottom: 5px;
-    font-size: 15px;
+    font-size: 14px;
     font-weight: bold;
 }
 .text-title {
     margin-bottom: 5px;
     font-weight: bold;
-    font-size: 15px;
+    font-size: 14px;
     font-family: cursive !important;
 }
 .text-left {
@@ -212,9 +212,14 @@ small {
     font-weight: 400;
 }
 
-#province_name{
+#gender_name{
     text-align: left;
     margin-left:7px;
+    font-size: 13px !important;
+}
+
+#gender_card{
+    font-size:14px !important;
 }
 
 .total-sum{
