--- a/public/homepage/css/custom.css
+++ b/public/homepage/css/custom.css
@@ -30,7 +30,7 @@
     /* margin-left: -2%; */
     /* width: 50%; */
     margin-top: -17px;
-    margin-left: -100px !important;
+    /* margin-left: -100px !important; */
     max-height: 30px !important;
 }
 .breadcrumb {
