slight changes in UI

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -379,7 +379,7 @@ textarea.form-control {
 }
 
 .app-header {
-  background-color: #4d94ff !important;
+  background-color: #64c8eb !important;
   height: 70px !important;
 }
 
