--- a/resources/sass/_custom.scss
+++ b/resources/sass/_custom.scss
@@ -350,7 +350,8 @@ textarea.form-control {
     background-color: #d7dce4;
 }
 .app-header {
-    background-color: #4d94ff !important;
+    // background-color: lightgray !important;
+    background-color: rgb(100, 200, 235)  !important;
     height: 70px !important;
 }
 .print_export_button {
