--- a/public/homepage/css/map.css
+++ b/public/homepage/css/map.css
@@ -2,6 +2,7 @@
     top: 0;
     height: 80vh;
     width: 100%;
+    left:5%;
     position: relative;
     flex-grow: 1;
     transition: 0.5s linear;
@@ -28,6 +29,8 @@
     box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
     border-radius: 5px;
     width: 150px;
+    position: relative;
+    right:50%;
 }
 
 .info h4 {
